Fix for two layout issues on IE11/Edge

--- a/webapp/sass/components/_emoticons.scss
+++ b/webapp/sass/components/_emoticons.scss
@@ -151,10 +151,10 @@
     .emoji-picker-items__container {
         > div {
             display: inline-block;
-            height: 22px;
+            height: 21px;
             margin: 3px;
             vertical-align: top;
-            width: 22px;
+            width: 21px;
         }
     }
 
@@ -168,10 +168,12 @@
 
 .emoji-picker__preview {
     border-top: 1px solid;
-    display: table-row;
+    display: table-cell;
+    vertical-align: middle;
     flex-grow: 0;
     flex-shrink: 0;
     height:45px;
+    width: 278px;
     padding: 3px 10px;
 
     &.emoji-picker__preview-placeholder {
